<resources>
    <string name="facebook_app_id">558108944885214</string>
    <string name="fb_login_protocol_scheme">fb558108944885214</string>


    <string name="app_name">Suzuki Motors</string>
    <string name="motorcycle_models_label">MOTORCYCLE\nMODELS</string>
    <string name="spare_parts_label">SPARE\nPARTS</string>
    <string name="dealer_locator_label">DEALER\nLOCATOR</string>
    <string name="service_center_label">SERVICE\nCENTER</string>
    <string name="customer_care_label">CUSTOMER\nCARE</string>
    <string name="label_create_an_account">Create an Account</string>
    <string name="label_full_name">Full Name</string>
    <string name="label_email_address">Email Address</string>
    <string name="label_password">Password</string>
    <string name="label_mobile_number">Mobile Number</string>
    <string name="label_mobile_number_required">Mobile Number <font color="red">*</font></string>
    <string name="label_terms_note">By creating an account, you agree to our <u>terms</u></string>
    <string name="label_sign_in_link"><u>SIGN IN</u></string>
    <string name="label_submit">Submit</string>
    <string name="label_mobile_hint">e.g, +63 917 123 4567</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_email_mobile">Email Address / Mobile Number</string>
    <string name="label_or">OR</string>
    <string name="label_forgot_password_link"><u>FORGOT PASSWORD</u></string>
    <string name="label_forgot_password">FORGOT PASSWORD</string>
    <string name="label_continue_facebook">Continue with Facebook</string>
    <string name="label_have_no_account">Have no account yet?</string>
    <string name="label_create_an_account_link"><u>CREATE AN ACCOUNT</u></string>
    <string name="label_send">Send</string>
    <string name="label_motorcycle_models">Motorcycle\nModels</string>
    <string name="label_dealerlocator">Dealer\nLocator</string>
    <string name="label_spareparts">Spare\nParts</string>
    <string name="label_servicecenters">Service\nCenters</string>
    <string name="label_my_suzuki_diary">My Suzuki\nDiary</string>
    <string name="link_find_nearest_dealer"><u>FIND YOUR NEAREST DEALER</u></string>
    <string name="link_watch_product_video"><u>WATCH THE PRODUCT VIDEO</u></string>
    <string name="complete_name">Complete Name <font color="red">*</font></string>
    <string name="label_landline">Landline <font color="red">*</font></string>
    <string name="label_phone_number">Phone Number <font color="red">*</font></string>
    <string name="label_email_required">Email Address <font color="red">*</font></string>
    <string name="label_location">Location</string>
    <string name="label_your_message_required">Your Message <font color="red">*</font></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_link_view_our_services"><u>VIEW OUR LIST OF SERVICES</u></string>
    <string name="label_inquire"><u>Inquire about this product</u></string>
    <string name="label_find_a_dealer"><u>Find a Dealer</u></string>
    <string name="label_old_password">Old Password</string>
    <string name="label_new_password">New Password</string>
    <string name="label_confirm_new_password">Confirm New Password</string>

</resources>
