<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_header_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        android:src="@drawable/shape_rect_blue"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"

        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_email_mobile"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dp"

        style="@style/suzukiHeader1"
        android:text="@string/label_forgot_password"
        />

    <TextView
        android:id="@+id/tv_email_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_email_mobile"

        android:layout_marginBottom="4dp"
        style="@style/suzukiHeader2"
        android:text="@string/label_email_mobile"
        />

    <EditText
        android:id="@+id/et_email_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_email_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_send"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        tools:text="fjanib@myoptimind.com"
        android:inputType="textEmailAddress"
        />


    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/et_email_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="12dp"
        android:minHeight="40dp"
        android:text="@string/label_send"
        android:textStyle="normal"

        style="@style/suzukiButton1"
        />


    <TextView
        android:id="@+id/tv_have_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_create_account"
        android:layout_marginBottom="4dp"

        style="@style/suzukiTextBody1"
        android:text="@string/label_have_no_account"

        />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_already_have_account"

        android:layout_marginBottom="16dp"
        style="@style/suzukiTextLink"
        android:text="@string/label_create_an_account_link"

        />



    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_in_link"

        android:layout_marginBottom="4dp"
        style="@style/suzukiTextBody1"
        android:text="Already have an account?"

        />

    <TextView
        android:id="@+id/tv_sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        style="@style/suzukiTextLink"
        android:text="@string/label_sign_in_link"

        android:layout_marginBottom="12dp"


        />

</androidx.constraintlayout.widget.ConstraintLayout>