<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_header_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"
        />

    <View
        android:id="@+id/bg_color"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:background="@color/color_blue_1100"
        android:elevation="-99dp"
        />


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_full_name"

        android:layout_marginBottom="4dp"

        style="@style/suzukiHeader1"
        android:text="@string/label_create_an_account"
        />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_full_name"
        android:layout_marginBottom="4dp"
        style="@style/suzukiHeader2"
        android:text="@string/label_full_name"
        />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_email"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        tools:text="Francis Jhondee Anib Diaz"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/et_full_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_email"

        android:layout_marginBottom="4dp"


        style="@style/suzukiHeader2"
        android:text="@string/label_email_address"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_password"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"

        tools:text="fjanib@myoptimind.com"
        />
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_password"

        android:layout_marginBottom="4dp"


        style="@style/suzukiHeader2"
        android:text="@string/label_password"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_mobile"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        tools:text="@tools:sample/lorem"
        android:inputType="textPassword"
        />
    <TextView
        android:id="@+id/tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_mobile"

        android:layout_marginBottom="4dp"

        style="@style/suzukiHeader2"
        android:text="@string/label_mobile_number"
        />

    <EditText
        android:id="@+id/et_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/label_mobile_hint"
        />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="35dp"

        app:layout_constraintTop_toBottomOf="@id/et_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_terms_note"

        android:layout_marginBottom="8dp"
        android:minHeight="40dp"
        android:text="@string/label_submit"

        style="@style/suzukiButton1"
        />

    <TextView
        android:id="@+id/tv_terms_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/btn_submit"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_already_have_account"

        android:layout_marginBottom="16dp"
        style="@style/suzukiTextBody1"
        android:text="@string/label_terms_note"
        />

    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_terms_note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_in_link"

        style="@style/suzukiTextBody1"
        android:text="Already have an account?"

        />

    <TextView
        android:id="@+id/tv_sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_already_have_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        style="@style/suzukiTextLink"
        android:text="@string/label_sign_in_link"

        android:layout_marginBottom="12dp"


        />






</androidx.constraintlayout.widget.ConstraintLayout>