<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/img_main_bg"
        android:scaleType="fitXY"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_email_mobile"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dp"

        style="@style/suzukiHeader1"
        android:text="@string/label_forgot_password"
        tools:ignore="NotSibling" />

    <TextView
        android:id="@+id/tv_email_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_email_mobile"

        android:layout_marginBottom="4dp"
        style="@style/suzukiHeader2"
        android:text="@string/label_email_mobile"
        />

    <EditText
        android:id="@+id/et_email_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_email_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_send"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="24dp"
        tools:text="fjanib@myoptimind.com"
        android:inputType="textEmailAddress"
        />


    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/et_email_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginTop="12dp"
        android:minHeight="40dp"
        android:text="@string/label_send"
        android:textStyle="normal"

        style="@style/suzukiButton1"
        />


    <TextView
        android:id="@+id/tv_have_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/btn_send"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_create_account"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="1"
        android:layout_marginBottom="4dp"

        style="@style/suzukiTextBody1"
        android:text="@string/label_have_no_account"

        />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_have_no_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_already_have_account"

        android:layout_marginBottom="18dp"
        style="@style/suzukiTextLink"
        android:text="@string/label_create_an_account_link"

        />



    <TextView
        android:id="@+id/tv_already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_create_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_sign_in_link"

        android:layout_marginBottom="4dp"
        style="@style/suzukiTextBody1"
        android:text="Already have an account?"

        />

    <TextView
        android:id="@+id/tv_sign_in_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_already_have_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"


        style="@style/suzukiTextLink"
        android:text="@string/label_sign_in_link"

        android:layout_marginBottom="24dp"


        />



</androidx.constraintlayout.widget.ConstraintLayout>