<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_header_background_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        tools:src="@tools:sample/backgrounds/scenic"
        android:scaleType="centerCrop"
        />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".45"
        />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/guideline"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_email_mobile"


        android:layout_marginBottom="4dp"

        style="@style/suzukiHeader1"
        android:text="@string/label_sign_in"
        />

    <TextView
        android:id="@+id/tv_email_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_email_mobile"

        style="@style/suzukiHeader2"
        android:text="@string/label_email_mobile"
        />

    <EditText
        android:id="@+id/et_email_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_email_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_password"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        tools:text="Francis Jhondee Anib Diaz"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/et_email_mobile"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_password"

        style="@style/suzukiHeader2"
        android:text="@string/label_password"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_sign_in"

        style="@style/suzukiEditText1"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"

        tools:text="fjanib@myoptimind.com"
        />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="35dp"

        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_forgot_password"

        android:layout_marginBottom="8dp"
        android:minHeight="40dp"
        android:text="@string/label_sign_in"
        android:textStyle="normal"

        style="@style/suzukiButton1"
        />

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/btn_sign_in"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/label_or"

        android:layout_marginBottom="10dp"
        style="@style/suzukiTextBody1"
        android:text="@string/label_forgot_password_link"
        />

    <View
        android:id="@+id/line_left"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_blue_300"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/label_or"
        app:layout_constraintTop_toTopOf="@id/label_or"
        app:layout_constraintBottom_toBottomOf="@id/label_or"

        android:layout_marginLeft="24dp"
        />

    <TextView
        android:id="@+id/label_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        app:layout_constraintLeft_toRightOf="@id/line_left"
        app:layout_constraintRight_toLeftOf="@id/line_right"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        app:layout_constraintBottom_toTopOf="@id/btn_facebook"

        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        style="@style/suzukiHeader1"
        android:text="@string/label_or"
        android:textSize="13sp"
        />

    <View
        android:id="@+id/line_right"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/color_blue_300"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/label_or"
        app:layout_constraintTop_toTopOf="@id/label_or"
        app:layout_constraintBottom_toBottomOf="@id/label_or"

        android:layout_marginRight="24dp"
        />


    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/label_or"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_have_no_account"

        android:layout_marginBottom="24dp"
        style="@style/suzukiButtonFacebook"
        android:text="@string/label_continue_facebook"
        android:drawableStart="@drawable/ic_apps_black_24dp"
        android:drawableTint="@android:color/white"
        />

    <TextView
        android:id="@+id/tv_have_no_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/btn_facebook"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_create_account"

        style="@style/suzukiTextBody1"
        android:text="@string/label_have_no_account"

        />

    <TextView
        android:id="@+id/tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/tv_have_no_account"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:layout_marginBottom="12dp"
        style="@style/suzukiTextLink"
        android:text="@string/label_create_an_account_link"

        />






</androidx.constraintlayout.widget.ConstraintLayout>